# AI-

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  README_EN.md  TeamMind - 智能团队知识记忆系统.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
demo/: app.py
docs/: design.md  project-overview.md  quality-plan.md  submission.md
src/: __init__.py  cli.py
src/agents/: __init__.py  comprehender.py  extractor.py  fallback_client.py  orchestrator.py  relater.py  store.py  utils.py
src/api/: __init__.py  main.py
src/ingestion/: __init__.py  processor.py
src/knowledge/: __init__.py  graph_store.py  vector_store.py
teammind/: LICENSE  README.md  docker-compose.yml
teammind/demo/: app.py
teammind/src/agents/: orchestrator.py  relater.py
teammind/src/knowledge/: vector_store.py
teammind/tests/: conftest.py
tests/: test_agents.py  test_infrastructure.py
